--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "lint": "eslint 'src/**/*.ts'"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "dotenv": "^17.2.3"
+    "express-validator": "^7.3.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
