--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Example environment variables for Server Metrics Backend
+# Example environment variables for express-metrics-lab
 
 # Port to run the server on
 PORT=3000
